# src/main.go
@@ -5,7 +5,9 @@ import (
 
 	"github.com/gin-gonic/gin"
 
+	docs "cashapi/docs"
 	authenticationcontroller "cashapi/src/controller/authentication"
+	groupcontroller "cashapi/src/controller/group"
 	paymentcontroller "cashapi/src/controller/payment"
 	usercontroller "cashapi/src/controller/user"
 
@@ -14,7 +16,7 @@ import (
 	"github.com/swaggo/gin-swagger/swaggerFiles"
 
 	//echoSwagger "github.com/swaggo/echo-swagger"
-	_ "cashapi/docs" // docs is generated by Swag CLI, you have to import it.
+	//docs "cashapi/docs" // docs is generated by Swag CLI, you have to import it.
 	// docs is generated by Swag CLI, you have to import it.
 
 	migration "cashapi/src/database/migration"
@@ -44,12 +46,18 @@ func main() {
 	user := r.Group("/user")
 	{
 		user.POST("/create", usercontroller.Create)
-		user.GET("/groups", usercontroller.Groups)
+		user.POST("/list", usercontroller.List)
 	}
 	payment := r.Group("/payment")
 	{
 		payment.POST("/create", paymentcontroller.Create)
 	}
+	group := r.Group("/group")
+	{
+		group.POST("/create", groupcontroller.Create)
+		group.GET("/list", groupcontroller.List)
+	}
+
 	//}
 
 	r.POST("/connect/token", func(c *gin.Context) {
@@ -64,7 +72,7 @@ func main() {
 }
 
 func init() {
-	//docs.SwaggerInfo.Title = "API CashAPI"
+	docs.SwaggerInfo.Title = "API CashAPI"
 }
 
 // Handler
